testsuite/tests/rename/should_fail/T11592.stderr

T11592.hs:5:14: error: Not in scope: type variable ‘a’

T11592.hs:7:16: error: Not in scope: type variable ‘a’

T11592.hs:8:18: error: Not in scope: type variable ‘a’

T11592.hs:10:20: error: Not in scope: type variable ‘a’
